OldArchive/71a2e702a849de736bd53ffaf69003ed-bff069f172c3f5c3bc4a5e28d7ac9796/output
+ g++ -std=c++11 -Wall -pedantic main.cpp
main.cpp: In function ‘int main()’:
main.cpp:66:29: error: expected ‘;’ before ‘std’
     std::cout << "Proper: " std::endl;
                             ^
main.cpp:73:30: error: expected ‘;’ before ‘std’
     std::cout << "Garbage: " std::endl;
                              ^
